--- a/package.json
+++ b/package.json
@@ -19,5 +19,11 @@
     "gulp-connect": "^5.0.0",
     "gulp-util": "^3.0.7",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "babel-preset-react": "^6.11.1",
+    "react": "^15.3.2",
+    "react-core": "0.0.0",
+    "react-dom": "^15.3.2"
   }
 }
