--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,15 @@
         "commonjs": true,
         "es6": true
     },
-    "extends": "eslint:recommended",
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parserOptions": {
         "sourceType": "module",
         "ecmaFeatures": {
+            "react": true,
             "jsx": true
         }
     },
+    "plugins": ["react"],
     "rules": {/*
         "indent": [
             "error",
