--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "eslint": "^3.3.1",
+    "eslint-plugin-react": "^6.4.1",
     "globby": "^6.0.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
