--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-connect": "^5.0.0",
     "gulp-util": "^3.0.7",
     "react-router": "^2.8.1",
+    "redux-devtools": "^3.3.1",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
@@ -28,6 +29,10 @@
     "dateformat": "^1.0.12",
     "react": "^15.3.2",
     "react-core": "0.0.0",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-thunk": "^1.0.0",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
