--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "cors": "^2.8.1",
+    "express": "^4.14.0",
+    "pg": "^6.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
